<resources>
    <string name="app_name">TestPro</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_age">Enter Student Age</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="add_student">Add Student</string>
    <string name="send">Send</string>
    <string name="students">students</string>
    <string name="id">id</string>
    <string name="stuName">name</string>
</resources>